--- a/src/main/web/WEB-INF/web.xml
+++ b/src/main/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/applicationContext.xml</param-value>
+        <param-value>/src/main/web/WEB-INF/applicationContext.xml</param-value>
     </context-param>
 
     <listener>
@@ -41,7 +41,8 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+            <param-value>/src/main/web/WEB-INF/dispatcher-servlet.xml</param-value>
+<!--            <param-value>/WEB-INF/dispatcher-servlet.xml</param-value>-->
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
